--- a/action.yaml
+++ b/action.yaml
@@ -142,12 +142,12 @@ runs:
 
   - name: Deploy compose files
     shell: bash
-    run: scp $COMPOSE_FILES ${inputs.ssh-username}@${{ inputs.server-address }}:${{ inputs.compose-folder }} -P ${inputs.ssh-port}
+    run: scp -P ${{ inputs.ssh-port }} $COMPOSE_FILES ${{ inputs.ssh-username }}@${{ inputs.server-address }}:${{ inputs.compose-folder }}
 
   - name: Run redeployment
     shell: bash
     run: |
-      ssh ${inputs.ssh-username}@${{ inputs.server-address }} -p ${inputs.ssh-port} \
+      ssh ${{ inputs.ssh-username }}@${{ inputs.server-address }} -p ${{ inputs.ssh-port }} \
       "set -e 
       cd ${{ inputs.compose-folder }}
       docker compose $COMPOSE_FILES_ARG pull 
